# resize-image-webp

./: .gitignore  README.md  pyproject.toml  requirements.txt  resize-webp.py  resize_webp.py
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
plans/260210-1600-logo-watermark-feature/: phase-01-ui-components.md  phase-02-helper-function.md  phase-03-worker-integration.md  phase-04-config-persistence.md  plan.md
plans/reports/: brainstorm-260210-1545-logo-watermark-feature.md  code-reviewer-260210-1615-watermark-feature.md  docs-manager-260210-1625-watermark-feature-docs.md  project-manager-260210-1621-logo-watermark-completion.md  tester-260210-1610-watermark-feature-qa.md
